--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        <div class="small-bubble"></div>
     <div class="main-container">
       
-      <h1>BORDER RADIUS PREVIEWER</h1>
+      <h1>BORDER RADIUS CHECKER</h1>
       <div class="white-line"></div>
       <a href="https://github.com/milosleng/BorderRadiusPreviewer-App" target="_blank" id="github"><i class="fab fa-github fa-fw"></i>View on GitHub</a>
         <div class="main-content">
@@ -40,7 +40,7 @@
         <div class="first-line">
           <p>border-radius:</p>
           <div class="copy-section">
-          <input type="text" class="values-input" placeholder="border-radius: 280px 70px 180px 300px;" />
+          <input type="text" class="values-input" placeholder="border-radius: 280px 70px 180px 300px;" value="border-radius: 280px 70px 180px 300px;" />
           <button class="copy-button">COPY</button>
         </div>
         </div>
