--- a/index.html
+++ b/index.html
@@ -16,49 +16,88 @@
   <body>
     <div class="bubbles">
       <div class="small-bubble"></div>
-       <div class="small-bubble"></div>
-       <div class="small-bubble"></div>
+      <div class="small-bubble"></div>
+      <div class="small-bubble"></div>
+    </div>
     <div class="main-container">
-      
       <h1>BORDER RADIUS CHECKER</h1>
       <div class="white-line"></div>
-      <a href="https://github.com/milosleng/BorderRadiusPreviewer-App" target="_blank" id="github"><i class="fab fa-github fa-fw"></i>View on GitHub</a>
-        <div class="main-content">
-          <div class="left-container">
-            <label for="#">Left Top (px)<input id="top-left" type="number"  min="0" max="1000" maxlength="4" size="4" placeholder="280"/></label>
-            <label for="#">Left Bottom (px)<input id="bottom-left" type="number"  min="0" max="1000" maxlength="4" size="4" placeholder="300"/></label>
-          </div>
-      <div class="border-radius-container">
-        <div class="inside"></div>
-      </div>
-      <div class="right-container">
-        <label for="#"><input id="top-right" type="number"  min="0" max="1000" maxlength="4" placeholder="70"/>Right Top (px)</label>
-        <label for="#"><input id="bottom-right" type="number"  min="0" max="1000" maxlength="4" placeholder="180"/>Right Bottom (px)</label>
-      </div>
+      <a
+        href="https://github.com/milosleng/BorderRadiusPreviewer-App"
+        target="_blank"
+        id="github"
+        ><i class="fab fa-github fa-fw"></i>View on GitHub</a
+      >
+      <div class="main-content">
+        <div class="left-container">
+          <label for="top-left"
+            >Left Top (px)<input
+              id="top-left"
+              type="text"
+              maxlength="4"
+              size="4"
+              placeholder="280"
+          /></label>
+          <label for="bottom-left"
+            >Left Bottom (px)<input
+              id="bottom-left"
+              type="text"
+              maxlength="4"
+              size="4"
+              placeholder="300"
+          /></label>
+        </div>
+        <div class="border-radius-container">
+          <div class="inside"></div>
+        </div>
+        <div class="right-container">
+          <label for="top-right"
+            ><input
+              id="top-right"
+              type="text"
+              maxlength="4"
+              size="4"
+              placeholder="70"
+            />Right Top (px)</label
+          >
+          <label for="bottom-right"
+            ><input
+              id="bottom-right"
+              type="text"
+              maxlength="4"
+              size="4"
+              placeholder="180"
+            />Right Bottom (px)</label
+          >
+        </div>
       </div>
       <div class="border-radius-data-container">
         <div class="first-line">
           <p>border-radius:</p>
           <div class="copy-section">
-          <input type="text" class="values-input" placeholder="border-radius: 280px 70px 180px 300px;" value="border-radius: 280px 70px 180px 300px;" />
-          <button class="copy-button">COPY</button>
-        </div>
+            <input
+              type="text"
+              class="values-input"
+              placeholder="border-radius: 280px 70px 180px 300px;"
+              value="border-radius: 280px 70px 180px 300px;"
+            />
+            <button class="copy-button">COPY</button>
+          </div>
         </div>
         <div class="second-line">
           <div class="switch-container">
             <p>Custom size:</p>
             <label class="switch">
-              <input type="checkbox" class="checkbox">
+              <input type="checkbox" class="checkbox" checked />
               <span class="slider round"></span>
             </label>
-            
           </div>
 
           <div class="width-height-container">
             <p>Width(px):</p>
-            <input type="number" id="width" value="500" min="100" max="1000"/>
+            <input type="number" id="width" value="500" min="100" max="1000" />
             <p>Height(px):</p>
-            <input type="number" id="height" value="500" min="100" max="1000"/>
+            <input type="number" id="height" value="500" min="100" max="1000" />
           </div>
         </div>
       </div>
